--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,17 +1,25 @@
 spring:
   application:
-    name: devscribe-notes-app
+    name: dev-notes-app
   datasource:
+    url: jdbc:h2:mem:devdb
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:notesdb
     username: admin
     password: admin
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
   h2:
     console:
       enabled: true
       path: /h2-console
-  jpa:
-    database: h2
-    hibernate:
-      ddl-auto: create
-    show-sql: true
+debug: true
+
+logging:
+  level:
+    org:
+    springframework: ERROR
